add ldapuser and alluser type permissions

--- a/server/src/main/resources/password/pwm/i18n/Config.properties
+++ b/server/src/main/resources/password/pwm/i18n/Config.properties
@@ -36,6 +36,7 @@ Button_Previous=Previous
 Button_CheckSettings=Check Settings
 Button_ShowAdvanced=Show %1% Advanced Settings
 Button_HideAdvanced=Hide Advanced Settings
+Button_AddPermission=Add Users
 Confirm_ConfigPasswordStored=The configuration password has been changed; please click the "save" icon to store the new password.
 Confirm_RemoveProfile=Are you sure you want to remove the profile <code>%1%</code>?  The setting values associated with this profile will also be removed.
 Confirm_LockConfig=Are you sure you want to restrict the configuration?  After you restrict the configuration, you must authenticate using your LDAP directory credentials before authenticating, so be sure your LDAP configuration is working properly before restricting.
@@ -54,7 +55,7 @@ Display_ConfigManagerNew=<p><b>Welcome to %1%.</b>  We hope you enjoy using this
 Display_ConfigManagerRunning=<p><b>The configuration for this server has been restricted.  However you can still edit the configuration.</b></p><p>For security reasons, to edit the configuration, you must upload (and then download) the <em>%1%</em> file.</p>
 Display_ConfigManagerRunningEditor=Your modified configuration is currently in memory, but has not yet been saved.  Please choose an option below to continue.
 Display_ConfigOpenInfo=<p>@PwmAppName@ is currently in <b>configuration</b> mode.   This mode allows updating the configuration without authenticating to an LDAP directory first.  End user functionality is not available in this mode.</p><p>After you have verified the LDAP directory settings, use the Configuration Manager to restrict the configuration to prevent unauthorized changes.  After restricting, the configuration can still be changed but will require LDAP directory authentication first.</p>
-Display_EditorLDAPSizeExceeded=Search results exceeded maximum search size.  Only this display is affected by this restriction.  Application behavior is not constrained by this search limit so additional users will match beyond those shown here.
+Display_EditorLDAPSizeExceeded=Search results exceeded maximum search size.  Only this display is affected by these search limits.  Application behavior is not constrained by this search limit so additional users will match beyond those shown here.
 Display_LdapPermissionRecommendations=<p>This report shows recommended LDAP permission requirements for the current configuration.  Depending on your LDAP directory type, these may be referred to as permissions, rights, or ACLs (Access Control List).</p><p?>These recommendations should be applied with caution and with an understanding of the security model of your specific LDAP directory environment.  <b>The suggested permissions may not neccessarily be appropriate for your environment.</b>  The access levels <i>read</i> and <i>write</i> are generalizations.  Your LDAP directory may use different permission types.</p><p>There may be additional permissions required that do not appear on this report. For example, permissions required to resolve macro expressions are not included.</p>
 Display_Wordlists_Description=Word lists and seed lists can be uploaded using this page or configured to import from a remote URL using the settings <code>@PwmSettingReference:pwm.wordlist.location@</code> and <code>@PwmSettingReference:pwm.seedlist.location@</code>.
 Display_SettingFilter_Level_0=Required
@@ -88,6 +89,7 @@ MenuDisplay_CancelConfig=Are you sure you want to abandon the changes to the cur
 MenuDisplay_StartConfigGuide=Start the guide to configure your LDAP server, certificates and basic settings.
 MenuDisplay_UploadConfig=Upload an existing configuration file. The uploaded file will be saved as the new configuration and will replace the current configuration.
 MenuDisplay_ViewLog=View recent log events. Requires pop-up windows to be enabled in your browser.
+MenuDisplay_Permissions=Select the matching set of users.  Multiple types of matches can be configured.  Each match type is additive, so that any user that matches any item is considered to be included.
 MenuItem_AlternateNewConfig=Alternate Option: Edit a new configuration
 MenuItem_AlternateUnlockConfig=Alternate Option: Un-Locking the Configuration
 MenuItem_CancelEdits=Cancel Edits
@@ -102,10 +104,20 @@ MenuItem_StartConfigGuide=Start Configuration Guide
 MenuItem_UploadConfig=Import Configuration
 MenuItem_UnlockConfig=Open Configuration
 MenuItem_ViewLog=View Log
+MenuItem_Permission_AllUsers=All Users
+MenuItem_Permission_LdapUser=LDAP User
+MenuItem_Permission_LdapGroup=LDAP Group
+MenuItem_Permission_LdapFilter=LDAP Search Filter
+MenuDisplay_Permission_AllUsers=Include all users of all profiles or a specified LDAP profile.
+MenuDisplay_Permission_LdapUser=Select a specific user based on the user's LDAP DN.
+MenuDisplay_Permission_LdapGroup=Select a set of users based on membership in an LDAP Group.
+MenuDisplay_Permission_LdapFilter=Include users that match a specified LDAP search filter.
 Setting_Permission_Profile=LDAP Profile
+Setting_Permission_Profile_AllUsers=All Users in Profile
 Setting_Permission_Filter=LDAP Search Filter
 Setting_Permission_Base=LDAP Base DN (Optional)
 Setting_Permission_Base_Group=LDAP Group DN
+Setting_Permission_Base_User=LDAP User DN
 Title_ConfigGuide=Configuration Guide
 Title_ConfigGuide_app=Application Configuration
 Title_ConfigGuide_ldap=LDAP Configuration
@@ -148,7 +160,7 @@ Tooltip_IconSearchNoResults=No search results
 Tooltip_IconExpandAll=Expand All
 Tooltip_IconCollapseAll=Collapse All
 Tooltip_IconFilterSettings=Filter Settings
-Tooltip_Setting_Permission_Profile=Specify which of the defined LDAP profiles to use for the associated filter.  If "all", then all profiles will be checked for the associated filter.
+Tooltip_Setting_Permission_Profile=Specify which of the defined LDAP profiles to use for the permission.  If "all", then all profiles will be checked for the permission.
 Tooltip_Setting_Permission_Filter=A valid LDAP search filter.
 Tooltip_Setting_Permission_Base=An optional LDAP Base DN for the search.  If supplied, only users under this LDAP Base DN will be considered a match.
 Tooltip_FormOptions_Description=Detailed description of this form item, including any special instructions.
