configeditor enhancements  - replaced filter icon dialog and replaced with toggles for level and modified only filter  - made save/cancel button more prominent  - improved correctness of menu navigation filtering

--- a/server/src/main/resources/password/pwm/i18n/Config.properties
+++ b/server/src/main/resources/password/pwm/i18n/Config.properties
@@ -58,9 +58,9 @@ Display_ConfigOpenInfo=<p>@PwmAppName@ is currently in <b>configuration</b> mode
 Display_EditorLDAPSizeExceeded=Search results exceeded maximum search size.  Only this display is affected by these search limits.  Application behavior is not constrained by this search limit so additional users will match beyond those shown here.
 Display_LdapPermissionRecommendations=<p>This report shows recommended LDAP permission requirements for the current configuration.  Depending on your LDAP directory type, these may be referred to as permissions, rights, or ACLs (Access Control List).</p><p?>These recommendations should be applied with caution and with an understanding of the security model of your specific LDAP directory environment.  <b>The suggested permissions may not neccessarily be appropriate for your environment.</b>  The access levels <i>read</i> and <i>write</i> are generalizations.  Your LDAP directory may use different permission types.</p><p>There may be additional permissions required that do not appear on this report. For example, permissions required to resolve macro expressions are not included.</p>
 Display_Wordlists_Description=Word lists and seed lists can be uploaded using this page or configured to import from a remote URL using the settings <code>@PwmSettingReference:pwm.wordlist.location@</code> and <code>@PwmSettingReference:pwm.seedlist.location@</code>.
-Display_SettingFilter_Level_0=Required
-Display_SettingFilter_Level_1=Standard / Common
-Display_SettingFilter_Level_2=Advanced
+Display_SettingFilter_Level_0=Basic
+Display_SettingFilter_Level_1=Intermediate
+Display_SettingFilter_Level_2=All Settings
 Display_SettingNavigationSeparator=\u0020\u21e8\u0020
 Display_SettingNavigationNullProfile=[profile]
 Display_RememberLogin=Remember password for %1%.
