add domainID to StoredConfigKey

--- a/server/src/main/resources/password/pwm/i18n/Config.properties
+++ b/server/src/main/resources/password/pwm/i18n/Config.properties
@@ -38,6 +38,7 @@ Button_ShowAdvanced=Show %1% Advanced Settings
 Button_HideAdvanced=Hide Advanced Settings
 Button_AddPermission=Add Users
 Confirm_ConfigPasswordStored=The configuration password has been changed; please click the "save" icon to store the new password.
+Confirm_RemoveDomain=Are you sure you want to remove the domain <code>%1%</code>?  ALL setting values associated with this profile will also be removed.
 Confirm_RemoveProfile=Are you sure you want to remove the profile <code>%1%</code>?  The setting values associated with this profile will also be removed.
 Confirm_LockConfig=Are you sure you want to restrict the configuration?  After you restrict the configuration, you must authenticate using your LDAP directory credentials before authenticating, so be sure your LDAP configuration is working properly before restricting.
 Confirm_SkipGuide=Are you sure you want to skip the configuration guide?
