--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -1201,7 +1201,7 @@ Setting_Label_recovery.enable=Enable Forgotten Password
 Setting_Label_recovery.form=Forgotten Password User Search Form
 Setting_Label_recovery.minimumPasswordLifetimeOptions=Minimum Password Lifetime Options
 Setting_Label_recovery.oauth.idserver.attributesUrl=OAuth Profile Service URL
-Setting_Label_recovery.oauth.idserver.attributesMethod=Select the HTTP method to use when calling the Attributes URL
+Setting_Label_recovery.oauth.idserver.attributesMethod=OAuth Profile Service HTTP Method
 Setting_Label_recovery.oauth.idserver.clientName=OAuth Client ID
 Setting_Label_recovery.oauth.idserver.codeResolveUrl=OAuth Code Resolve Service URL
 Setting_Label_recovery.oauth.idserver.dnAttributeName=OAuth User Name/DN Login Attribute
