--- a/server/src/main/resources/password/pwm/i18n/Config.properties
+++ b/server/src/main/resources/password/pwm/i18n/Config.properties
@@ -36,7 +36,7 @@ Button_Previous=Previous
 Button_CheckSettings=Check Settings
 Button_ShowAdvanced=Show %1% Advanced Settings
 Button_HideAdvanced=Hide Advanced Settings
-Button_AddPermission=Add Users
+Button_AddPermission=Add
 Confirm_ConfigPasswordStored=The configuration password has been changed; please click the "save" icon to store the new password.
 Confirm_RemoveDomain=Are you sure you want to remove the domain <code>%1%</code>?  All setting values associated with this domain will also be removed.
 Confirm_RemoveProfile=Are you sure you want to remove the profile <code>%1%</code>?  The setting values associated with this profile will also be removed.
