minor logging fixes/improvements

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -883,7 +883,7 @@ Setting_Label_display.showLoginPageOptions=Show Login Page Options
 Setting_Label_display.showSuccessPage=Show Success Pages
 Setting_Label_display.tokenSuccessPage=Show Token Entry Success Pages
 Setting_Label_display.updateAttributes.agreement=Update Profile Agreement Message
-Setting_Label_domain.list=Domains
+Setting_Label_domain.list=List of domains.  Domains provide a way for multiple systems/sites/tenants to use a single instance of the @PwmAppName@ application.  Typically only a single instance is required.  If multiple domains are listed, the configuration editor will allow per-domain configuration of many settings.  Other settings are system-level and apply to the entire application instance.
 Setting_Label_domain.hosts=Domain Hostnames
 Setting_Label_domain.system.adminDomain=Administrative Domain
 Setting_Label_domain.system.domainPaths=Enable Domain Paths
