reorganized admin pages migrated report system to per-request reports

--- a/server/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/server/src/main/resources/password/pwm/i18n/Admin.properties
@@ -34,6 +34,7 @@ Notice_DynamicRefresh=This content is dynamically updated.
 Notice_ReportSummary=Locally cached data is shown here.  This data is periodically read from the configured LDAP directories.
 Notice_EventStatistics=Event statistics shown are for this local server.
 Button_DownloadCSV=Download as CSV
+Button_Download_Report=Download Report
 Notice_TrialRestrictConfig=Restricted configuration is not available in trial mode
 Tooltip_DownloadReportRecords=Download all records to a Comma Separated Value (CSV) file.  All cached records and columns will be downloaded.  Columns are comma delimited (,)  Fields are wrapped with double quotation marks (") when containing a comma (,) in the value.  The first row will contain field names.
 Field_Report_UserDN=UserDN
@@ -336,6 +337,7 @@ Title_LogViewer=Log Viewer
 Title_TokenLookup=Token Search
 Title_RequestsInProgress=Requests in Progress
 Title_URLReference=URL Reference
+Title_UserDebug=User Debugger
 MenuItem_ConfigEditor=Configuration Editor
 MenuItem_ConfigManager=Configuration Manager
 Field_AppVersion=%1% Version
