setup responses module improvements including support for multiple profiles

--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -99,6 +99,7 @@ Display_CheckingResponses=Checking Answers....
 Display_ClientDisconnect=Unable to communicate with server.
 Display_CommunicationError=Unable to communicate with server.  Continue when ready.
 Display_ConfirmResponses=Be sure your answers and questions are correct.  Check the spelling and punctuation.  In you are unable to remember your password, you will be able to access your account by supplying the answers to these security questions.
+Display_ConfirmHelpdeskResponses=These answers will allow your helpdesk to verify your identity when you contact them.  Be sure your answers and questions are correct. 
 Display_Day=day
 Display_Days=days
 Display_DeleteUserConfirm=Are you sure you wish to delete your account?  This can not be undone.
@@ -309,6 +310,7 @@ Long_Title_UserInformation=Information about your password and password policies
 Long_Title_DeleteAccount=Remove your account and profile from this service
 Long_Title_VerificationSend=Before this user can be selected, the user's identity must be verified.  Please select a verification method.
 Title_AnsweredQuestions=Answered Questions
+Title_AnsweredHelpdeskQuestions=Answered Helpdesk Questions
 Title_ActivateUser=Activate Account
 Title_Admin=Administration
 Title_Application=Password Self Service
