--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -36,7 +36,9 @@ Category_Description_BASIC_SSO=Basic Authentication
 Category_Description_CAPTCHA=Captcha functionality uses an implementation of reCAPTCHA to prevent non-human attacks.  If this server faces the public internet, it is strongly recommended to enable the CAPTCHA functionality.  reCAPTCHA information can be found at <a href\="http\://www.google.com/recaptcha" target\="_blank">http\://www.google.com/recaptcha/</a><br/><br/>Registration at the reCAPTCHA site provides a site key and secret which you must configure here for reCAPTCHA support.
 Category_Description_CAS_SSO=
 Category_Description_CHALLENGE_POLICY=Define the challenge policy users use for populating response answers.
-Category_Description_CHALLENGE=Settings that control the Challenge/Response features.  These global settings apply regardless of the challenge policy.  For profile-specific challenge settings, see Profiles --> Challenge Profiles.
+Category_Description_SETUP_RESPONSES=Settings that control the Challenge/Response features.  These global settings apply regardless of the challenge policy.  For profile-specific challenge settings, see Profiles --> Challenge Profiles.
+Category_Description_SETUP_RESPONSES_SETTINGS=Settings that control the Challenge/Response features.  These global settings apply regardless of the challenge policy.  For profile-specific challenge settings, see Profiles --> Challenge Profiles.
+Category_Description_SETUP_RESPONSES_PROFILE=Settings that control the Challenge/Response features.  These global settings apply regardless of the challenge policy.  For profile-specific challenge settings, see Profiles --> Challenge Profiles.
 Category_Description_CHANGE_PASSWORD=The change password module is the core functionality of the application.  Use these settings to control the behavior and functionality of the change password functionality that all users see.
 Category_Description_CHANGE_PASSWORD_SETTINGS=The change password module is the core functionality of the application.  Use these settings to control the behavior and functionality of the change password functionality that all users see.
 Category_Description_CHANGE_PASSWORD_PROFILE=The change password module is the core functionality of the application.  Use these settings to control the behavior and functionality of the change password functionality that all users see.
@@ -149,7 +151,9 @@ Category_Label_BASIC_SSO=Basic Authentication
 Category_Label_CAPTCHA=Captcha
 Category_Label_CAS_SSO=CAS SSO
 Category_Label_CHALLENGE_POLICY=Challenge Policies
-Category_Label_CHALLENGE=Setup Security Questions
+Category_Label_SETUP_RESPONSES=Setup Security Questions
+Category_Label_SETUP_RESPONSES_SETTINGS=Setup Security Settings
+Category_Label_SETUP_RESPONSES_PROFILE=Setup Security Profiles
 Category_Label_CHANGE_PASSWORD=Change Password
 Category_Label_CHANGE_PASSWORD_SETTINGS=Settings
 Category_Label_CHANGE_PASSWORD_PROFILE=Profiles
@@ -282,6 +286,7 @@ Setting_Description_challenge.caseInsensitive=Enable to control the case sensiti
 Setting_Description_challenge.enable=Enable this option to have the save responses page available to users. (Default enabled)
 Setting_Description_challenge.enforceMinimumPasswordLifetime=Enable this option to enforce the minimum password lifetime setting when the users authenticate via Forgotten Password. If this setting is true, the users cannot change their passwords if the minimum password lifetime setting has not passed.  If false, @PwmAppName@ permits the users to change their passwords when they are authenticated via Forgotten Password even if the minimum lifetime setting has not passed.
 Setting_Description_challenge.forceSetup=Enable this option to direct the users to configure Challenge/Response when they log in.  @PwmAppName@ forces the users to enter responses if they do not have current valid responses stored.
+Setting_Description_challenge.helpdesk.forceSetup=Enable this option to direct the users to configure their helpdesk Challenge/Response when they log in.  @PwmAppName@ forces the users to enter responses if they do not have current valid responses stored.
 Setting_Description_challenge.helpdesk.minRandomsSetup=Specify the minimum number of Help Desk random questions you require the users to complete during the Response Setup.  If this number is higher than the available randoms, or lower than the minimum required, the system adjusts it accordingly.  Set this option to zero to force the users to configure all available randoms Challenge/Response questions at the time of setup.
 Setting_Description_challenge.helpdesk.randomChallenges=Specify additional random questions to present to the help desk users. @PwmAppName@ might require the users to supply answers to all or some of these questions when setting up their responses, as controlled by the "Minimum Help Desk Random Challenges Required During Setup" setting.  The questions and answers are visible to Help Desk users but are not used for forgotten password recovery.
 Setting_Description_challenge.helpdesk.requiredChallenges=Add the questions the users must supply answers for when setting up their responses.  The questions and answers are visible to Help Desk users but are not used for forgotten password recovery.
@@ -557,6 +562,7 @@ Setting_Description_oauth.idserver.serverCerts=Import the certificate for the OA
 Setting_Description_otp.enabled=Enable this option to allow the user to configure and save an one time password.
 Setting_Description_otp.forceSetup=Enable this option and enabled one-time passwords to have @PwmAppName@ direct the user to configure a one-time password secret when logging in. @PwmAppName@ forces the user to configure one-time password if they do not have a current valid secret stored.
 Setting_Description_otp.profile.list=List of OTP Profiles
+Setting_Description_setupResponses.profile.list=List of Setup Responses Profiles
 Setting_Description_otp.secret.allowSetup.queryMatch=Specify the set of users that this OTP Setup profile will include.
 Setting_Description_otp.secret.encrypt=Enable this option to have @PwmAppName@ use the Security Key to encrypt and decrypt token information, to make sure it is not readable as plain text. Multiple application instances must use the same Security Key.  If you change the Security Key, stored OTP passwords are no longer usable.
 Setting_Description_otp.secret.identifier=Specify the User Identifier for OTP.  Macros are available.
@@ -821,6 +827,7 @@ Setting_Label_challenge.caseInsensitive=Case Insensitive Responses
 Setting_Label_challenge.enable=Enable Setup Responses
 Setting_Label_challenge.enforceMinimumPasswordLifetime=Enforce Minimum Password Lifetime
 Setting_Label_challenge.forceSetup=Force Response Setup
+Setting_Label_challenge.helpdesk.forceSetup=Force Helpdesk Response Setup
 Setting_Label_challenge.helpdesk.minRandomsSetup=Minimum Help Desk Random Challenges Required During Setup
 Setting_Label_challenge.helpdesk.randomChallenges=Help Desk Random Questions
 Setting_Label_challenge.helpdesk.requiredChallenges=Help Desk Required Questions
@@ -1096,6 +1103,7 @@ Setting_Label_oauth.idserver.serverCerts=OAuth Server Certificate
 Setting_Label_otp.enabled=Allow Saving One Time Passwords
 Setting_Label_otp.forceSetup=Force Setup of One Time Passwords
 Setting_Label_otp.profile.list=OTP Profiles
+Setting_Label_setupResponses.profile.list=Setup Responses Profiles
 Setting_Label_otp.secret.allowSetup.queryMatch=One Time Password Profile Match
 Setting_Label_otp.secret.encrypt=Encrypt OTP secret
 Setting_Label_otp.secret.identifier=OTP Secret Identifier
