fix name of Activation queryMatch setting ( see bug #573 )

--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -798,7 +798,7 @@ Setting_Label_activateUser.allowUnlock=Unlock User During Activation
 Setting_Label_activateUser.profile.list=Activate User Profile List
 Setting_Label_activateUser.enable=Enable User Activation
 Setting_Label_activateUser.form=Activate User Form
-Setting_Label_activateUser.queryMatch=Activation Permission
+Setting_Label_activateUser.queryMatch=User Activation Profile Match
 Setting_Label_activateUser.searchFilter=Activation Search Filter
 Setting_Label_activateUser.token.sendMethod=Token Send Method
 Setting_Label_activateUser.writePostAttributes=Post-Activation Actions (After Password Change)
