fix issue with reporting not passing form parameters from UI

--- a/server/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/server/src/main/resources/password/pwm/i18n/Admin.properties
@@ -311,7 +311,7 @@ EpsStatistic_Label.DB_WRITES=Database Writes
 Title_About=About
 Title_DirectoryReporting=Directory Reporting
 Title_DataViewer=Data Viewer
-Title_ReportEngineStatus=Report Engine Status
+Title_DirectoryReport=Directory Report
 Title_EventStatistics=Event Statistics
 Title_RawStatistics=Raw Statistics
 Title_StatisticsCharts=Event Charts
