issue 663 - fix misc configuguide bugs and add additional setting warnings

--- a/server/src/main/resources/password/pwm/i18n/ConfigGuide.properties
+++ b/server/src/main/resources/password/pwm/i18n/ConfigGuide.properties
@@ -24,6 +24,7 @@ ldap_admin_title=LDAP Proxy Credentials
 ldap_admin_title_proxy_dn=Proxy DN
 ldap_admin_title_proxy_pw=Proxy Password
 ldap_cert_description=The following are the LDAP server certificates read from the server at <code>%1%</code>. Please verify these certificates match your LDAP server.
+ldap_context_title=LDAP Login Root Context
 ldap_context_description=Please enter the top level container of your LDAP directory that contains users. This sets the top level LDAP container where an LDAP sub-tree search is performed to find user entries. If you need to enter multiple containers, you can add them after this guide completes.  Authentication to @PwmAppName@ is permitted only for users that are contained within the configured context values.
 ldap_context_admin_title=Administrator User
 ldap_context_admin_description=<p>A user in your LDAP directory will be used to control administrative access to @PwmAppName@.</p><p>Please enter the LDAP distinguished name (DN) of the user to use to control administrative access.</p><p>As with all users, <b>administrative users must be contained within the previously configured LDAP Login Root Context ("%1%")</b>.</p><p>After the configuration guide is complete, you can assign additional users as administrators.</p>
