--- a/server/src/main/resources/password/pwm/i18n/Health.properties
+++ b/server/src/main/resources/password/pwm/i18n/Health.properties
@@ -23,6 +23,7 @@ HealthMessage_NoData=Health data is not currently available.  Please check again
 HealthMessage_LDAP_OK=All configured LDAP servers are reachable
 HealthMessage_LDAP_No_Connection=Unable to connect to LDAP server %1%, error: %2%
 HealthMessage_LDAP_AdminUserOk=The admin user has been validated.
+HealthMessage_LDAP_AdminNotInContext=The admin user must be a child entry of the %1% setting value "%2%".
 HealthMessage_LDAP_ProxyTestSameUser=%1% setting is the same value as the %2% setting
 HealthMessage_LDAP_ProxyUserOk=The proxy user for the %1 profile is okay.
 HealthMessage_LDAP_ProxyUserPwExpired=Proxy user %1% password will expire within %2%.  The proxy user password should never expire. 
