--- a/server/src/main/resources/password/pwm/i18n/Health.properties
+++ b/server/src/main/resources/password/pwm/i18n/Health.properties
@@ -99,6 +99,8 @@ HealthMessage_ServiceClosed_LocalDBUnavail=unable to start %1% service, LocalDB 
 HealthMessage_ServiceClosed_AppReadOnly=unable to start %1% service, application is in read-only mode
 HealthMessage_ServiceError=Error operating service %1% service: %2%
 HealthMessage_SMS_SendFailure=Error while sending SMS messages: %1%
+HealthMessage_Version_OutOfDate=This version of %1% is out of date.  The current released version is %2%.
+HealthMessage_Version_Unreachable=Unable to check current version: %1%
 HealthMessage_Wordlist_AutoImportFailure=Configured word list (%1%) failed to import due to error: %2% at timestamp %3%
 HealthMessage_Wordlist_ImportInProgress=Wordlist import is in progress.  Application performance may be degraded during import.  %1%
 HealthStatus_WARN=WARN
