--- a/server/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/server/src/main/resources/password/pwm/i18n/Admin.properties
@@ -309,6 +309,7 @@ EpsStatistic_Label.PWMDB_WRITES=LocalDB Writes
 EpsStatistic_Label.DB_READS=Database Reads
 EpsStatistic_Label.DB_WRITES=Database Writes
 Title_About=About
+Title_Admin_System_Certificates=Certificate Summary
 Title_DirectoryReporting=Directory Reporting
 Title_DataViewer=Data Viewer
 Title_DirectoryReport=Directory Report
