fix configeditor UI setting testers and add async/timeout functionality

--- a/server/src/main/resources/password/pwm/i18n/Error.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error.properties
@@ -166,6 +166,7 @@ Error_RemoteErrorValue=Remote Error: %1%
 Error_WordlistImportError=An error occurred importing the wordlist: %1%
 Error_PwNotifyServiceError=An error occurred while running the password notify service: %1%
 Error_HttpError=An error occurred while connecting to remote HTTP service.
+Error_Timeout=The requested operation has timed out
 
 Error_ConfigUploadSuccess=File uploaded successfully
 Error_ConfigUploadFailure=File failed to upload.
