statistics refactoring and stand-alone viewer

--- a/server/src/main/resources/password/pwm/i18n/Admin.properties
+++ b/server/src/main/resources/password/pwm/i18n/Admin.properties
@@ -315,7 +315,7 @@ Title_DirectoryReporting=Directory Reporting
 Title_DataViewer=Data Viewer
 Title_DirectoryReport=Directory Report
 Title_EventStatistics=Event Statistics
-Title_RawStatistics=Raw Statistics
+Title_Statistics=Statistics
 Title_StatisticsCharts=Event Charts
 Title_Sessions=Active Web Sessions
 Title_Intruders=Intruders
